      <michael_zanetti@gmx.net>).

  CHANGES:
    * Grouping mode has been merged into the playlist layouts so each layout
      sets its own. The default grouping mode for layout files that do not 
      have this value explicitly set is "Album". Thanks to Tim Bocek 
      <tim.bocek@gmail.com> for this set of patches.

  BUGFIXES:
    * Do not crash when removing a track with no album from the playlist while
      the repeat album navigator is active. (BR 207427)
    * Fix genre tag in old MP4 files not being shown correctly (fixed in
      Taglib-Extras-0.1.7, and upcoming TagLib-1.6). (BR 198238)
    * Focus behavior is now consistent between the browsers filter widget and the
      playlist filter widget. (BR 206776)
    * OSX: Fixed crash when activating inline playlist editing. (BR 206576)
    * Fixed dockwidget menu getting shown when right clicking on the progress
      slider causing the slider to follow the mouse. (BR 206350)
    * Use filename as track title for non collection files if no other title can be
      found by reading metadata tags. (BR 206794)
    * Update playlist filter, sort order and grouping when the metadata of a track
      changes. (BR 206754)
    * Do not crash if trying to load a completely empty playlist layout.
      (BR 204236)
    * Correctly show timecodes, if present, when starting playback of a new track. 
      (BR 191185 ??)
    * The playlist sorting scheme is restored on startup.
    * Fixed compilation of iPod collections without gdk-pixbuf.h. (BR 206347)
    * Audio CDs are ejected properly.
    * Media device eject/disconnect actions render properly when scrolling the 
      collection browser. (BR 204566)
    * Fixed wikipedia applet not working when using a custom skin. Thanks to Stefan 
      Majewsky for the suggestion. (BR 205901)
    * Fixed "Show in Service" action.
    * Fixed extra empty rows sometimes getting added to the playlist layout xml
      when using the playlist layout editor. (BR 205182)